         Many thanks to Justin Burket and Diane Bruce.
      6) Added a <MODEM> macro that changes the current modem
      7) Added "Log File" status to saved application state
      8) Added Pulse Audio support
      9) Added "use default audio device" if h/w changes
     10) Added HELL80 mode
     11) Fixes to ringbuffer / audio backends
     12) Fixes to mfsk picture mode decoding

2.09  1) Modified src/Makefile.am for FreeBSD name space clash
      2) Added psk multi-channel viewer with regex search capability
      3) Rewrote audio capture/playback/generate routines to use the
         libsndfile C API. Added .au support (32bit floats, host endianness)

2.08  1) Changes to build process:
	     a. Use PortAudio's C API; the C++ bindings are no longer required
         b. Boost is no longer required when std::(tr1::)bind is available,
            as is the case with g++ >= 4.0
         c. Autodetect TLS support
         d. Use std::bind (or std::tr1::bind) if available. 
         e. Add m4 macros for TLS autodetection (the --enable-tls/--disable-tls 
            switches are still supported).
         f. Minor changes to configure.ac
      2) qrunner cleanups
      3) New ringbuffer and other utility code
      4) New item in the sample rate menu: "Native" selects the hardware's 
         preferred sample rate. Breaks backward compatibility: saving this 
         with fldigi-2.08 will result in an "invalid sample rate" message if 
         the same fldigi_def.xml file is then used with 2.07 -- until "Auto" 
         or a specific value is selected again.
      5) Correction to the waterfall's "casual tuning" feature: don't set the 
         modem to SIGSEARCH when the right mouse button is released.
      6) Set locale only for LC_TIME
      7) Add .desktop, move icons to data/; for deb / rpm build compatibility
      8) Exception trapping and print to stdout on program failure 
      9) Fixes to modem class logic: