@@ -59,6 +59,9 @@ enum {
 	MODE_DOMINOEX22,
 
 	MODE_FELDHELL,
+	MODE_SLOWHELL,
+	MODE_HELLX5,
+	MODE_HELLX9,
 	MODE_FSKHELL,
 	MODE_FSKH105,
 	MODE_HELL80,
