@@ -182,6 +182,9 @@ extern modem *cw_modem;
 extern modem *mfsk8_modem;
 extern modem *mfsk16_modem;
 extern modem *feld_modem;
+extern modem *feld_slowmodem;
+extern modem *feld_x5modem;
+extern modem *feld_x9modem;
 extern modem *feld_FMmodem;
 extern modem *feld_FM105modem;
 extern modem *feld_80modem;
