@@ -15,6 +15,9 @@ modem *cw_modem = 0;
 modem *mfsk8_modem = 0;
 modem *mfsk16_modem = 0;
 modem *feld_modem = 0;
+modem *feld_slowmodem = 0;
+modem *feld_x5modem = 0;
+modem *feld_x9modem = 0;
 modem *feld_FMmodem = 0;
 modem *feld_FM105modem = 0;
 modem *feld_80modem = 0;
